// Expense and Expense Category management schema

Table expense_categories {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar(255) [not null]
  group varchar(50) [not null]                       // 'PRODUCTION' or 'OPERATIONAL'
  product_category_id uuid [null]                    // Relasi ke categories (nullable)
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  deleted_at timestamp [null]

  Note: 'Kategori pengeluaran untuk klasifikasi operasional vs produksi'
}

Table expenses {
  id uuid [pk, default: `gen_random_uuid()`]
  expense_number varchar(100) [not null, unique]
  invoice_number varchar(100) [null]
  supplier_id uuid [null]
  vendor_name varchar(255) [not null, default: 'Umum']
  amount decimal(15,2) [not null, default: 0]
  status varchar(50) [not null, default: 'PAID']      // 'PAID', 'PARTIAL', 'UNPAID'
  expense_date timestamp [default: `now()`]          // Waktu transaksi pengeluaran
  description text [null]
  cashier_id uuid [not null]                          // User yang menginput pengeluaran
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  deleted_at timestamp [null]

  Note: 'Transaksi pengeluaran header (operational & production)'
}

Table expense_items {
  id uuid [pk, default: `gen_random_uuid()`]
  expense_id uuid [not null]
  expense_category_id uuid [not null]
  description varchar(255) [null]
  amount decimal(15,2) [not null, default: 0]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  deleted_at timestamp [null]

  Note: 'Detail item pengeluaran per nota'
}

Table expense_payments {
  id uuid [pk, default: `gen_random_uuid()`]
  expense_id uuid [not null]
  amount decimal(15,2) [not null, default: 0]
  payment_date timestamp [default: `now()`]
  payment_method varchar(50) [not null]               // 'CASH', 'TRANSFER', dll
  cashier_id uuid [not null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  deleted_at timestamp [null]

  Note: 'Pembayaran / cicilan untuk pengeluaran'
}

// Relationships
Ref: expense_categories.product_category_id > categories.id [delete: set null]
Ref: expenses.supplier_id > suppliers.id [delete: set null]
Ref: expenses.cashier_id > users.id [delete: restrict]
Ref: expense_items.expense_id > expenses.id [delete: cascade]
Ref: expense_items.expense_category_id > expense_categories.id [delete: restrict]
Ref: expense_payments.expense_id > expenses.id [delete: cascade]
Ref: expense_payments.cashier_id > users.id [delete: restrict]
